--- a/EventManager.Client/Pages/SL/MovieListPage.razor
+++ b/EventManager.Client/Pages/SL/MovieListPage.razor
@@ -14,7 +14,7 @@
         <div class="action-bar">
             @if (CanAdd)
             {
-                <MudIconButton Icon="@Icons.Filled.Add" OnClick="OpenAddMovieDialog" />
+                <MudIconButton Icon="@Icons.Filled.Add" OnClick="OpenAddMovieDialog" Color="Color.Primary" />
             }
         </div>
         @if (MovieList != null && MovieList.Count > 0)
