--- a/EventManager.Client/Pages/SL/MySeriesListPage.razor
+++ b/EventManager.Client/Pages/SL/MySeriesListPage.razor
@@ -12,7 +12,7 @@
     else
     {
         <div class="action-bar">
-            <MudIconButton Icon="@Icons.Filled.Edit" OnClick="OpenEditMySeriesDialog" />
+            <MudIconButton Icon="@Icons.Filled.Edit" OnClick="OpenEditMySeriesDialog" Color="Color.Primary" />
         </div>
         @if (SeriesList != null && SeriesList.Count > 0)
         {
