--- a/EventManager.Client/Shared/Components/WM/FieldComponent.razor.scss
+++ b/EventManager.Client/Shared/Components/WM/FieldComponent.razor.scss
@@ -1,27 +1,31 @@
-﻿@import "../../../Styles/_common.scss";
+﻿@import '../../../Styles/_common.scss';
 
 .wm-field {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    border-bottom: $primary-secondary-trans 3px solid;
-    border-radius: $border-radius;
-    padding: 0.5rem;
-    background-color: $orange-trans;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  border-bottom: $primary-secondary-trans 3px solid;
+  border-radius: $border-radius;
+  padding: 0.5rem;
+  background-color: $orange-trans;
 
-    .title-row {
-        display: flex;
-        color: $primary;
+  &.modifiable:hover {
+    cursor: pointer;
+  }
 
-        .title {
-            font-style: italic;
-        }
+  .title-row {
+    display: flex;
+    color: $primary;
 
-        .spacer {
-            flex-grow: 1;
-        }
-
-        .hours {
-            font-weight: bold;
-        }
+    .title {
+      font-style: italic;
     }
+
+    .spacer {
+      flex-grow: 1;
+    }
+
+    .hours {
+      font-weight: bold;
+    }
+  }
 }
