--- a/EventManager.Client/Pages/SL/BookListPage.razor
+++ b/EventManager.Client/Pages/SL/BookListPage.razor
@@ -14,7 +14,7 @@
         <div class="action-bar">
             @if (CanAdd)
             {
-                <MudIconButton Icon="@Icons.Filled.Add" OnClick="OpenAddBookDialog" />
+                <MudIconButton Icon="@Icons.Filled.Add" OnClick="OpenAddBookDialog" Color="Color.Primary" />
             }
         </div>
         @if (BookList != null && BookList.Count > 0)
