--- a/EventManager.Client/Pages/SL/SeriesDataPage.razor
+++ b/EventManager.Client/Pages/SL/SeriesDataPage.razor
@@ -18,20 +18,20 @@
             @if (CanAddOrEdit)
             {
                 <div>
-                    <MudIconButton Icon="@Icons.Filled.Edit" OnClick="OpenEditSeriesDialog" />
+                    <MudIconButton Icon="@Icons.Filled.Edit" OnClick="OpenEditSeriesDialog" Color="Color.Primary" />
                 </div>
             }
             @if (CanDelete)
             {
                 <div>
-                    <MudIconButton Icon="@Icons.Filled.Delete" OnClick="OpenDeleteDialog" />
+                    <MudIconButton Icon="@Icons.Filled.Delete" OnClick="OpenDeleteDialog" Color="Color.Error" />
                 </div>
             }
             @if (CanAddOrEdit)
             {
                 <div>
-                    <MudIconButton Icon="@Icons.Filled.Image" OnClick="OpenEditSeriesImageDialog" />
-                    <MudIconButton Icon="@Icons.Filled.Category" OnClick="OpenEditSeriesCategoriesDialog" />
+                    <MudIconButton Icon="@Icons.Filled.Image" OnClick="OpenEditSeriesImageDialog"  Color="Color.Secondary" />
+                    <MudIconButton Icon="@Icons.Filled.Category" OnClick="OpenEditSeriesCategoriesDialog"  Color="Color.Secondary" />
                 </div>
             }
 
@@ -40,16 +40,16 @@
                 @if (Series.IsMine)
                 {
                     <div>
-                        <MudIconButton Icon="@Icons.Filled.Remove" OnClick="RemoveFromMySeriesList" />
+                        <MudIconButton Icon="@Icons.Filled.Remove" OnClick="RemoveFromMySeriesList" Color="Color.Secondary" />
                         @if (Series.Seasons != null && Series.Seasons.Count > 0 && Series.Seasons.Sum(x => x.Episodes.Count) > 0)
                         {
                             @if (Series.IsSeen)
                             {
-                                <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetSeenStatus(false))" />
+                                <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetSeenStatus(false))" Color="Color.Secondary" />
                             }
                             else
                             {
-                                <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetSeenStatus(true))" />
+                                <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetSeenStatus(true))" Color="Color.Secondary" />
                             }
                         }
                     </div>
@@ -57,17 +57,19 @@
                 else
                 {
                     <div>
-                        <MudIconButton Icon="@Icons.Filled.Add" OnClick="AddToMySeriesList" />
+                        <MudIconButton Icon="@Icons.Filled.Add" OnClick="AddToMySeriesList" Color="Color.Secondary" />
                     </div>
                 }
             }
             <span class="spacer"></span>
-            <MudButton OnClick="@(() => Navigation.NavigateTo("/series"))">Series List</MudButton>
-                <MudButton OnClick="@(() => Navigation.NavigateTo("/my-series"))">My Series List</MudButton>
+            <div>
+                <MudButton OnClick="@(() => Navigation.NavigateTo("/series"))" Color="Color.Primary">Series List</MudButton>
+                <MudButton OnClick="@(() => Navigation.NavigateTo("/my-series"))" Color="Color.Primary">My Series List</MudButton>
+            </div>
         </div>
         @if (Series != null)
         {
-             <MudTabs Rounded="true" Centered="true" Class="tab-group">
+             <MudTabs Rounded="true" Centered="true" Class="tab-group" Color="Color.Primary">
                   <MudTabPanel Text="Data">
                       <div class="data">
                         <div class="data-rows">
@@ -115,7 +117,7 @@
                             <div class="rates">
                                 @foreach (var rate in RateList)
                                 {
-                                    <MudIcon Class="rate-icon" Icon="@(rate <= Series.Rate ? Icons.Filled.Star : Icons.Filled.StarBorder)" @onclick="@(() => UpdateRate(rate))" Tag="@rate"></MudIcon>
+                                    <MudIcon Class="rate-icon" Color="Color.Warning" Icon="@(rate <= Series.Rate ? Icons.Filled.Star : Icons.Filled.StarBorder)" @onclick="@(() => UpdateRate(rate))" Tag="@rate"></MudIcon>
                                 }
                             </div>
                         </div>
@@ -143,7 +145,7 @@
                                     <span class="spacer"></span>
                                     @if (CanDelete)
                                     {
-                                        <MudIconButton Icon="@Icons.Filled.Delete" OnClick="@(() => OpenDeleteSeasonDialog(season))" />
+                                        <MudIconButton Icon="@Icons.Filled.Delete" OnClick="@(() => OpenDeleteSeasonDialog(season))" Color="Color.Error" />
                                     }
                                 </div>
                                 <div class="body">
@@ -156,7 +158,7 @@
                                                     <span class="spacer"></span>
                                                     @if (CanDelete)
                                                     {
-                                                        <MudIconButton Icon="@Icons.Filled.Delete" OnClick="@(() => OpenDeleteEpisodeDialog(episode))" />
+                                                        <MudIconButton Icon="@Icons.Filled.Delete" OnClick="@(() => OpenDeleteEpisodeDialog(episode))" Color="Color.Error" />
                                                     }
                                                 </div>
                                                 <div class="ep-body">
@@ -164,16 +166,16 @@
                                                 </div>
                                                 <div class="ep-foot">
                                                     <span class="spacer"></span>
-                                                    <MudIconButton Icon="@Icons.Filled.OpenInNew" OnClick="@(() => OpenEpisode(episode.Id))" />
+                                                    <MudIconButton Icon="@Icons.Filled.OpenInNew" OnClick="@(() => OpenEpisode(episode.Id))" Color="Color.Secondary" />
                                                     @if (Series.IsMine)
                                                     {
                                                         @if (episode.Seen)
                                                         {
-                                                            <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetEpisodeSeenStatus(episode.Id, false))" />
+                                                            <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetEpisodeSeenStatus(episode.Id, false))" Color="Color.Primary" />
                                                         }
                                                         else
                                                         {
-                                                            <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetEpisodeSeenStatus(episode.Id, true))" />
+                                                            <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetEpisodeSeenStatus(episode.Id, true))" Color="Color.Primary" />
                                                         }
                                                     }
                                                 </div>
@@ -189,7 +191,7 @@
                                             <span class="spacer"></span>
                                             @if (CanAddOrEdit)
                                             {
-                                                <MudIconButton Icon="@Icons.Filled.Add" OnClick="@(() => AddIncrementedEpisode(season.Id))" />
+                                                <MudIconButton Icon="@Icons.Filled.Add" OnClick="@(() => AddIncrementedEpisode(season.Id))" Color="Color.Primary" />
                                             }
                                             @if (Series.IsMine)
                                             {
@@ -197,11 +199,11 @@
                                                 {
                                                     @if (season.IsSeen)
                                                     {
-                                                        <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetSeasonSeenStatus(season.Id, false))" />
+                                                        <MudIconButton Icon="@Icons.Filled.VisibilityOff" OnClick="@(() => SetSeasonSeenStatus(season.Id, false))" Color="Color.Primary" />
                                                     }
                                                     else
                                                     {
-                                                        <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetSeasonSeenStatus(season.Id, true))" />
+                                                        <MudIconButton Icon="@Icons.Filled.Visibility" OnClick="@(() => SetSeasonSeenStatus(season.Id, true))" Color="Color.Primary" />
                                                     }
                                                 }
                                             }
@@ -220,13 +222,13 @@
                             <span class="spacer"></span>
                             @if (CanAddOrEdit)
                             {
-                                <MudIconButton Icon="@Icons.Filled.Add" OnClick="AddIncrementedSeason" />
+                                <MudIconButton Icon="@Icons.Filled.Add" OnClick="AddIncrementedSeason" Color="Color.Primary" />
                             }
                         </div>
                     </div>
                 </MudTabPanel>
                 <MudTabPanel Text="Comments">
-                    <div class="comments">
+                    <div class="comments blue-label">
                         <div class="comment-list">
                             @foreach (var comment in CommentList)
                             {
@@ -240,7 +242,7 @@
                             </div>
                             <div class="down-row">
                                 <span class="spacer"></span>
-                                <MudButton OnClick="SaveComment">Comment</MudButton>
+                                <MudButton OnClick="SaveComment" Variant="Variant.Filled" Color="Color.Primary">Comment</MudButton>
                             </div>
                         </div>
                     </div>
