--- a/EventManager.Client/Pages/SL/SeriesListPage.razor
+++ b/EventManager.Client/Pages/SL/SeriesListPage.razor
@@ -14,7 +14,7 @@
         <div class="action-bar">
             @if (CanAdd)
             {
-                <MudIconButton Icon="@Icons.Filled.Add" OnClick="OpenAddSeriesDialog" />
+                <MudIconButton Icon="@Icons.Filled.Add" OnClick="OpenAddSeriesDialog" Color="Color.Primary" />
             }
         </div>
         @if (SeriesList != null && SeriesList.Count > 0)
