--- a/EventManager.Client/Pages/WM/WorkingManagerPage.razor.scss
+++ b/EventManager.Client/Pages/WM/WorkingManagerPage.razor.scss
@@ -1,87 +1,91 @@
-﻿@import "../../Styles/_common.scss";
+﻿@import '../../Styles/_common.scss';
 
 .wm {
-    .title-bar {
-        display: flex;
+  .title-bar {
+    display: flex;
 
-        .spacer {
-            flex-grow: 1;
-        }
-
-        .date {
-            color: $primary;
-            font-style: italic;
-        }
+    .spacer {
+      flex-grow: 1;
     }
 
-    .action-bar {
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        border-bottom: $primary-secondary-trans 3px solid;
-        border-radius: $border-radius;
-        padding: 0.5rem;
-        background-color: $orange-trans;
-        display: flex;
+    .date {
+      color: $primary;
+      font-style: italic;
+    }
+  }
 
-        .spacer {
-            flex-grow: 1;
-        }
+  .select-div {
+    width: max-content;
+  }
+
+  .action-bar {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border-bottom: $primary-secondary-trans 3px solid;
+    border-radius: $border-radius;
+    padding: 0.5rem;
+    background-color: $orange-trans;
+    display: flex;
+
+    .spacer {
+      flex-grow: 1;
+    }
+  }
+
+  .working-day-settings {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border-bottom: $primary-secondary-trans 3px solid;
+    border-radius: $border-radius;
+    padding: 0.5rem;
+    background-color: $blue-light-trans;
+  }
+
+  .stats {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border-bottom: $primary-secondary-trans 3px solid;
+    border-radius: $border-radius;
+    padding: 0.5rem;
+    background-color: $green-light-trans;
+
+    .hour-sum {
+      strong {
+        color: $primary;
+      }
     }
 
-    .working-day-settings {
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        border-bottom: $primary-secondary-trans 3px solid;
-        border-radius: $border-radius;
-        padding: 0.5rem;
-        background-color: $blue-light-trans;
+    .state {
+      * {
+        font-style: italic;
+        font-weight: bold;
+        font-size: 1.2rem;
+      }
+
+      .is-lot {
+        color: $blue;
+      }
+
+      .optimal {
+        color: $green;
+      }
+
+      .enough {
+        color: $orange;
+      }
+
+      .not-enough {
+        color: $red;
+      }
     }
+  }
 
-    .stats {
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        border-bottom: $primary-secondary-trans 3px solid;
-        border-radius: $border-radius;
-        padding: 0.5rem;
-        background-color: $green-light-trans;
-
-        .hour-sum {
-            strong {
-                color: $primary;
-            }
-        }
-
-        .state {
-            * {
-                font-style: italic;
-                font-weight: bold;
-                font-size: 1.2rem;
-            }
-
-            .is-lot {
-                color: $blue;
-            }
-
-            .optimal {
-                color: $green;
-            }
-
-            .enough {
-                color: $orange;
-            }
-
-            .not-enough {
-                color: $red;
-            }
-        }
-    }
-
-    .field-list {
-        margin-bottom: 1rem;
-        margin-top: 1rem;
-        border-bottom: $primary-secondary-trans 3px solid;
-        border-radius: $border-radius;
-        padding: 0.5rem;
-        background-color: $white-trans;
-    }
+  .field-list {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border-bottom: $primary-secondary-trans 3px solid;
+    border-radius: $border-radius;
+    padding: 0.5rem;
+    background-color: $white-trans;
+  }
 }
