--- a/EventManager.Client/Shared/Components/WM/FieldComponent.razor.css
+++ b/EventManager.Client/Shared/Components/WM/FieldComponent.razor.css
@@ -4,13 +4,22 @@
   border-bottom: rgba(80, 0, 255, 0.3) 3px solid;
   border-radius: 4px;
   padding: 0.5rem;
-  background-color: rgba(240, 174, 73, 0.4); }
-  .wm-field .title-row {
-    display: flex;
-    color: #5120a5; }
-    .wm-field .title-row .title {
-      font-style: italic; }
-    .wm-field .title-row .spacer {
-      flex-grow: 1; }
-    .wm-field .title-row .hours {
-      font-weight: bold; }
+  background-color: rgba(240, 174, 73, 0.4);
+}
+.wm-field .title-row {
+  display: flex;
+  color: #5120a5;
+}
+.wm-field .title-row .title {
+  font-style: italic;
+}
+.wm-field .title-row .spacer {
+  flex-grow: 1;
+}
+.wm-field .title-row .hours {
+  font-weight: bold;
+}
+
+.wm-field.modifiable:hover {
+  cursor: pointer;
+}
